--- a/sass/color.scss
+++ b/sass/color.scss
@@ -6,27 +6,26 @@ $purple: #7a20c6;
 $blue: #204fc6;
 
 .pink{
-  position: absolute;
-  border-right-color: $pink;
-  border-top-color: $pink;
+  border-right-color: $pink !important;
+  border-top-color: $pink !important;
 }
 .green{
-  border-right-color: $green;
-  border-top-color: $green;
+  border-right-color: $green !important;
+  border-top-color: $green !important;
 }
 .yellow{
-  border-right-color: $yellow;
-  border-top-color: $yellow;
+  border-right-color: $yellow !important;
+  border-top-color: $yellow !important;
 }
 .red{
-  border-right-color: $red;
-  border-top-color: $red;
+  border-right-color: $red !important;
+  border-top-color: $red !important;
 }
 .purple{
-  border-right-color: $purple;
-  border-top-color: $purple;
+  border-right-color: $purple !important;
+  border-top-color: $purple !important;
 }
 .blue{
-  border-right-color: $blue;
-  border-top-color: $blue;
+  border-right-color: $blue !important;
+  border-top-color: $blue !important;
 }
