--- a/templates/page--front.html.twig
+++ b/templates/page--front.html.twig
@@ -59,6 +59,9 @@
   <div class="custom" role="custom">
     {{ page.custom }}
   </div>
+  <div class="innovation" role="innovation">
+    {{ page.innovation }}
+  </div>
 {#  <main role="main">#}
 {#      {{ page.content }}#}
 {#  </main>#}
