--- a/sass/style.scss
+++ b/sass/style.scss
@@ -396,6 +396,223 @@ div[role=navigation]{
 
 .innovation {
   padding-top: 60px;
+
+  & > div:nth-child(2) {
+    background: #dc2744;
+  }
+
+  .innovation-con {
+    max-width: calc(1920px - 8%);
+    width: 80%;
+    padding: 50px 0 20px;
+    margin: 0 auto;
+
+    .views-row {
+      display: inline-block;
+      position: relative;
+      vertical-align: top;
+      text-align: center;
+
+      &:nth-child(1) {
+        width: 33%;
+        margin-left: 0;
+        margin-top: 50px;
+
+        span:first-child {
+          top: 10%;
+          width: 30%;
+          left: 2%;
+        }
+        span:nth-child(2) {
+          top: 1%;
+          width: 22%;
+          left: 27%;
+        }
+        span:nth-child(3) {
+          top: -11%;
+          width: 34%;
+          left: 47%;
+        }
+        span:nth-child(4) {
+          top: 15%;
+          left: 71%;
+          width: 28%;
+        }
+        span:nth-child(5) {
+          top: 45%;
+          left: 72%;
+          width: 23%;
+        }
+      }
+      &:nth-child(2) {
+        width: 42%;
+        margin-top: 100px;
+        margin-left: -4%;
+
+        span:first-child {
+          top: 29%;
+          width: 23%;
+          left: 4%;
+        }
+        span:nth-child(2) {
+          top: 3%;
+          width: 27%;
+          left: 13%;
+        }
+        span:nth-child(3) {
+          top: -3%;
+          width: 21%;
+          left: 40%;
+        }
+        span:nth-child(4) {
+          top: 1%;
+          left: 58%;
+          width: 30%;
+        }
+        span:nth-child(5) {
+          top: 29%;
+          left: 74%;
+          width: 24%;
+        }
+
+      }
+      &:nth-child(3) {
+        width: 33%;
+        margin-top: 55px;
+        margin-left: -6%;
+
+        span:first-child {
+          top: 10%;
+          width: 30%;
+          left: 2%;
+        }
+        span:nth-child(2) {
+          top: 1%;
+          width: 22%;
+          left: 27%;
+        }
+        span:nth-child(3) {
+          top: -11%;
+          width: 34%;
+          left: 47%;
+        }
+        span:nth-child(4) {
+          top: 15%;
+          left: 71%;
+          width: 28%;
+        }
+        span:nth-child(5) {
+          top: 45%;
+          left: 72%;
+          width: 23%;
+        }
+
+      }
+      &:nth-child(4) {
+        width: 35%;
+        margin-top: -16%;
+        margin-left: 8%;
+
+        span:first-child {
+          top: 25%;
+          width: 36%;
+          left: -9%;
+        }
+        span:nth-child(2) {
+          top: 7%;
+          width: 24%;
+          left: 15%;
+        }
+        span:nth-child(3) {
+          top: -2%;
+          width: 24%;
+          left: 36%;
+        }
+        span:nth-child(4) {
+          top: -1%;
+          left: 58%;
+          width: 30%;
+        }
+        span:nth-child(5) {
+          top: 26%;
+          left: 73%;
+          width: 26%;
+        }
+      }
+      &:nth-child(5) {
+        width: 48%;
+        margin-left: 8%;
+        margin-top: -20%;
+
+        span:first-child {
+          top: 41%;
+          width: 15%;
+          left: 0;
+        }
+        span:nth-child(2) {
+          top: 46%;
+          width: 21%;
+          left: 14.5%;
+        }
+        span:nth-child(3) {
+          top: 12%;
+          width: 26%;
+          left: 15%;
+        }
+        span:nth-child(4) {
+          top: 15%;
+          left: 59%;
+          width: 19%;
+        }
+        span:nth-child(5) {
+          top: 37%;
+          left: 65%;
+          width: 23%;
+        }
+
+        .views-field-field-innovation-title {
+          width: 33%;
+          padding-bottom: 33%;
+        }
+      }
+      
+      img {
+        width: 100%;
+        height: 100%;
+      }
+
+      .views-field-field-innovation-title{
+        background-color: #fff;
+        margin: 20% auto;
+        padding-bottom: 50%;
+        width: 50%;
+        height: 0;
+        border-radius: 50%;
+        position: relative;
+        text-align: center;
+
+        .field-content {
+          font-weight: bold;
+          color: #d71f3c;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 100%;
+          font-size: 20px;
+          font-size: 1.25rem;
+          transform: translate(-50%,-50%);
+          -ms-transform: translate(-50%,-50%);
+          -moz-transform: translate(-50%,-50%);
+          -webkit-transform: translate(-50%,-50%);
+          -o-transform: translate(-50%,-50%);
+        }
+      }
+
+      .innovation-image {
+        position: absolute;
+      }
+    }
+  }
 }
 
 
