--- a/templates/page--front.html.twig
+++ b/templates/page--front.html.twig
@@ -62,6 +62,9 @@
   <div class="innovation" role="innovation">
     {{ page.innovation }}
   </div>
+  <div class="locationhero" role="locationhero">
+    {{ page.locationhero }}
+  </div>
 {#  <main role="main">#}
 {#      {{ page.content }}#}
 {#  </main>#}
