--- a/sass/style.scss
+++ b/sass/style.scss
@@ -615,4 +615,67 @@ div[role=navigation]{
   }
 }
 
+.locationhero {
+  margin-top: 60px;
+}
+
+.footer{
+  background: #f8f8f8;
+
+  .footer-contactUs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #191919;
+    padding: 15px 0;
+    position: relative;
+    color: #626260;
+  }
+  .footer-contactUs > span{
+    font-weight: bold;
+    font-size: 20px;
+    font-size: 1.25rem;
+    padding-right: 40px;
+  }
+
+  .icon-group {
+    text-align: left;
+    display: inline-block;
+    vertical-align: middle;
+    border-left: 1px solid #2b2b2a;
+}
+  .icon {
+    display: inline-block;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-left: 40px;
+    cursor: pointer;
+  }
+  .weChat{
+    background: #41413e url("../images/icon-wechat.png") no-repeat 10px 10px;
+    background-size: 20px;
+  }
+  .in {
+    background: #41413e url("../images/icon-in.png") no-repeat 10px 10px;
+    background-size: 20px;
+  }
+  .weibo{
+    background: #41413e url("../images/icon-weibo.png") no-repeat 10px 10px;
+    background-size: 20px;
+  }
+  .footer-info{
+    font-size: 12px;
+    text-align: center;
+    line-height: 1.5;
+    color: #5c5b5b;
+    margin: 12px 0;
+  }
+  .footer-info a {
+    color: #5c5b5b;
+    text-decoration: underline;
+  }
+}
+
 
