--- a/sass/global.scss
+++ b/sass/global.scss
@@ -21,3 +21,6 @@ body{
   font: 16px/1 "Helvetica Neue",Helvetica,Tahoma,Arial,"Microsoft JhengHei","Microsoft YaHei","Hiragino Sans GB","Heiti SC",sans-serif;
   -webkit-font-smoothing: antialiased;
 }
+input, button {
+  outline: none;
+}
