--- a/templates/page--front.html.twig
+++ b/templates/page--front.html.twig
@@ -77,6 +77,16 @@
       {% endif %}
     </div>
   </div>
+  <div class="office">
+  
+  </div>
+  <div class="subscription">
+      <p class="title">订阅最新数字化资讯与洞察</p>
+      <div class="box">
+        <input class="box-input" placeholder="你的Email地址" autocomplete="email" require type="email">
+        <button class="box-btn">提交</button>
+      </div>
+  </div>
 {#  <main role="main">#}
 {#      {{ page.content }}#}
 {#  </main>#}
