--- a/sass/font.scss
+++ b/sass/font.scss
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'iconfont';
-    src: url('./font_location/iconfont.eot');
-    src: url('./font_location/iconfont.eot?#iefix') format('embedded-opentype'),
-        url('./font_location/iconfont.woff2') format('woff2'),
-        url('./font_location/iconfont.woff') format('woff'),
-        url('./font_location/iconfont.ttf') format('truetype'),
-        url('./font_location/iconfont.svg#iconfont') format('svg');
+    src: url('./font/iconfont.eot');
+    src: url('./font/iconfont.eot?#iefix') format('embedded-opentype'),
+        url('./font/iconfont.woff2') format('woff2'),
+        url('./font/iconfont.woff') format('woff'),
+        url('./font/iconfont.ttf') format('truetype'),
+        url('./font/iconfont.svg#iconfont') format('svg');
   }
