--- a/templates/page--front.html.twig
+++ b/templates/page--front.html.twig
@@ -45,13 +45,22 @@
 <div class="layout-container">
 
   <header role="header" class="header">
-  {{kint(page.header)}}
+  	{# {{kint(page.header)}} #}
     {{ page.header.headerlogo_2 }}
     {{ page.header.drivenbyimpactwhite_2 }}
     {{ page.header.drivenbyimpactred }}
     <span id="header-lang" class="lang-cn"></span>
     {{ page.header.headermenu_2 }}
     {{ page.header.langlink }}
+    <div class="header-middle">
+		<div class="header-menu-toggle">
+			<span class="first icon-bar"></span>
+			<span class="second icon-bar"></span>
+			<span class="third icon-bar"></span>
+		</div>
+		<a class="header-middle-logo" href="#"><img src="/sites/drupal.dd/files/inline-images/logo-mobile.png"></a>
+    	{{ page.header.headermenu_2 }}
+    </div>
   </header>
 
   <div class="banner" role="banner">
