--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
   height: 60px;
   border-bottom: 1px solid rgba(244,244,244,.3);
   z-index: 100;
+  user-select: none;
 
   & > div {
     display: inline-block;
@@ -63,7 +64,7 @@
 
 
   .lang-box{
-    width: 10.5%;
+    width: 165px;
     display: none;
     padding: 15px 15px 0;
     position: absolute;
@@ -161,6 +162,34 @@
       width: 80px;
       height: 43px;
       margin-left: -40px;
+    }
+
+    .header-middle-nav {
+      background-color: hsl(347, 100%, 40%);
+      position: absolute;
+      top: 60px;
+      left: -15px;
+      padding: 0 15px;
+      width: 100%;
+      display: none;
+      overflow: hidden;
+      & ul {
+        position: relative;
+        left: -15px;
+        width: 150%;
+      }
+      & li {
+        padding: 0;
+        margin: 0;
+        a {
+          line-height: 60px;
+          font-size: 18px;
+          padding: 0 20px 0 48px;
+          color: #fff;
+          display: block;
+          border-top: 1px solid rgba(255,255,255,.6);
+        }
+      }
     }
   }
 
