--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,3 +1,9 @@
+@media (min-width: 1350px) {
+    html {
+        font-size: 120%;
+    }
+}
+
 @media (min-width: 1024px) {
     .header {
         .lang {
@@ -73,6 +79,35 @@
     .drivenByImpactWhite, .drivenByImpactWhite {
         display: none;
     }
-    
+    .provider {
+        .views-row:hover & > ul{
+            display: none !important;
+        }
+        .provider-mobile-description{
+            font-size: 14px;
+            font-size: .875rem;
+        }
+        .provider-gif, .provider-pic{
+            display: none !important;
+        }
+    }
+}
 
+@media (max-width: 767px) and (min-width: 0) {
+    html {
+        font-size: 80%;
+    }
+    .banner-d-con h1 {
+        font-size: 35px;
+        font-size: 2.1875rem;
+        padding: 15px 0;
+    }
+    .provider {
+        .provider-mobile-description{
+            font-size: 16px;
+            font-size: 1rem;
+            width: 80%;
+            margin: 0 auto;
+        }
+    }
 }
