--- a/templates/page--front.html.twig
+++ b/templates/page--front.html.twig
@@ -130,6 +130,6 @@
 {#      {{ page.content }}#}
 {#  </main>#}
 
-  {% include '@myTheme/custom-footer.html.twig' %}
+  {% include '@CIAndT/custom-footer.html.twig' %}
 
-</div>{# /.layout-container #}
+</div>
