--- a/templates/page--front.html.twig
+++ b/templates/page--front.html.twig
@@ -48,9 +48,7 @@
   </header>
 
   <div class="banner" role="banner">
-    {% if page.banner %}
-      {{ page.banner }}
-    {% endif %}
+    {{ page.banner }}
   </div>
   <div class="provider" role="provider">
     {{ page.provider }}
@@ -62,7 +60,7 @@
     {{ page.innovation }}
   </div>
   <div id="location" class="location" role="location">
-    {{ page.locationhero.localtionherodescription }}
+    {{ page.locationhero.locationherodescription }}
     <div class="location-container">
       {% if page.locationhero.locationheromap %}
         <div class="view-header">
@@ -78,53 +76,12 @@
   </div>
   <div class="office">
       <div class="view-content">
-          <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="/sites/drupal.dd/files/officeImg/1.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="/sites/drupal.dd/files/officeImg/2.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="/sites/drupal.dd/files/officeImg/3.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="/sites/drupal.dd/files/officeImg/4.jpg">
-              </div>
-            </div>
-            <div class="button-prev"></div>
-            <div class="button-next"></div>
-          </div>
-        </div>
-        <div class="china-office">
-          <h2>中国办事处</h2>
-          <div class="location-url">
-              <a href="http://j.map.baidu.com/JQj0I">百度地图链接</a>
-          </div>
-          <ul>
-            <li>上海</li>
-            <li>地址：上海市徐汇区天钥桥路580号6层</li>
-            <li>电话：400-100-6061</li>
-          </ul>
-          <p></p>
-          <div class="location-url">
-              <a href="http://j.map.baidu.com/JQj0I">百度地图链接</a>
-          </div>
-          <ul>
-            <li>宁波总部</li>
-            <li>地址：浙江省宁波市鄞州区天童南路700号荣安大厦A901</li>
-            <li>电话：+86（574）28816655</li>
-            <li>传真：+86（574）28816650</li>
-          </ul>
-        </div>
+          {{ page.office.officeswiper }}
+      </div>
+       {{ page.office.chinaoffice }}
   </div>
   <div class="subscription">
-      <p class="title">订阅最新数字化资讯与洞察</p>
-      <div class="box">
-        <input class="box-input" placeholder="你的Email地址" autocomplete="email" require type="email">
-        <button class="box-btn">提交</button>
-      </div>
+      {{ page.subscription.subscriptionctn }}
   </div>
 {#  <main role="main">#}
 {#      {{ page.content }}#}
