--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1036,6 +1036,7 @@
       color: #5c5b5b;
       font-size: 14px;
       font-size: .875rem;
+      padding: 20px 0;
     }
   }
   .swiper-container, .swiper-wrapper {
