--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1030,6 +1030,8 @@
 
     a, li {
       line-height: 1.5;
+      font-size: 14px;
+      font-size: .875rem;
     }
     p {
       line-height: 1.5;
