--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -23,6 +23,9 @@
    
 }
 @media (max-width: 1024px) and (min-width: 0) {
+    html {
+        font-size: 100%;
+    }
     .header {
         background: #ce002b;
         opacity: 1;
@@ -98,6 +101,24 @@
             display: none;
         }
     }
+    .location {
+        .views-field-field-location-name{
+            display: none;
+        }
+        .views-row::before {
+            font-size: 16px !important;
+            font-size: 1rem !important;
+            margin-top: -16px !important;
+        }
+        .views-row:last-child::before{
+            font-size: 35px !important;
+            font-size: 2.1875rem !important;
+            margin-top: -73px !important;
+        }
+    }
+    .office .china-office p{
+        padding: 0 !important;
+    }
 }
 
 @media (max-width: 767px) and (min-width: 0) {
@@ -123,5 +144,83 @@
     .custom .views-row {
         width: 100%;
         height: 50vw;
+    }
+    .innovation {
+        .views-row {
+            width: 90% !important;
+        }
+    } 
+    .office {
+        .view-content {
+            width: 100%;
+            float: none;
+        }
+        .china-office {
+            width: 94%;
+            margin: 20px auto 40px;
+            position: static;
+            text-align: center;
+            transform: translate(0,0);
+            -ms-transform: translate(0,0);
+            -moz-transform: translate(0,0);
+            -webkit-transform: translate(0,0);
+            -o-transform: translate(0,0);
+        }
+    }
+    .subscription {
+        .box {
+            display: block !important;
+            width: 80%;
+            max-width: 80%;
+            min-width: 80%;
+
+            .box-input, .box-btn{
+                width: 100%;
+            }
+            .box-btn {
+                margin-left: 0;
+                margin-top: 10px;
+            }
+        }
+    }
+
+    .footer {
+        .footer-contactUs{
+            display: block;
+            background: #fff;
+
+            & > span {
+                display: block;
+                text-align: center;
+                padding-right: 0 !important;
+                margin: 20px auto;
+            }
+            & .icon-group{
+                display: block;
+                text-align: center;
+                border: none;
+                
+                & > span {
+                    background-color: #d1d1d1;
+                    margin-left: 10px;
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+
+    .location {
+        .view-content {
+
+            .views-row:last-child:before {
+                margin-left: -27px;
+                margin-top: -60px!important;
+            }
+            .views-row:last-child {
+                top: 34%;
+            }
+
+        }
+        
     }
 }
