--- a/sass/style.scss
+++ b/sass/style.scss
@@ -994,7 +994,8 @@
     text-align: center;
     line-height: 1.5;
     color: #5c5b5b;
-    margin: 12px 0;
+    height: 42px;
+    line-height: 42px;
   }
   .footer-info a {
     color: #5c5b5b;
@@ -1216,6 +1217,30 @@
     background-color: #d71f3c;
     box-sizing: border-box;
     transition: all .5s;
+  }
+  .cs-middle-chat {
+    font-size: 20px;
+    font-size: 1.25rem;
+    text-align: center;
+    padding: 10px 0;
+    display: none;
+    cursor: pointer;
+
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      background-image: url("../images/sprites-image.png");
+      background-size: 40px auto;
+      background-position-x: -5px;
+      margin-right: 15px;
+      vertical-align: middle;
+    }
+
+    span {
+      vertical-align: middle;
+    }
   }
   .dark-red {
     color: #6b0f1e !important;
