--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -51,6 +51,6 @@
       {{ page.content }}
   </main>
 
-  {% include '@myTheme/custom-footer.html.twig' %}
+  {% include '@CIAndT/custom-footer.html.twig' %}
 
 </div>
