--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -44,7 +44,7 @@
 #}
 <div class="layout-container">
 
-  <header role="header" class="header">
+  <header role="header" class="header white-desktop">
     {{ page.header }}
   </header>
   <main role="main">
