--- a/sass/style.scss
+++ b/sass/style.scss
@@ -260,13 +260,13 @@
     justify-content: center;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
     color: #fff;
   }
 
   & video {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: auto;
     object-fit: fill;
   }
 
@@ -870,8 +870,8 @@
       &:last-child:before {
         font-size: 50px;
         font-size: 3.125rem;
-        margin-top: -80px;
-        margin-left: -35px;
+        margin-top: -90px;
+        margin-left: -60px;
       }
       &:last-child{
         margin-left: -45px;
