--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1356,7 +1356,7 @@ main[role="main"] {
   padding-top: 60px;
 }
 
-.servicePage, .customPage {
+.singlePage {
   margin-top: 0;
   padding-top: 120px;
 }
