--- a/templates/page--industries.html.twig
+++ b/templates/page--industries.html.twig
@@ -47,8 +47,8 @@
     {{ page.header }}
   </header>
 
-  <div class="provider singlePage" role="provider">
-    {{ page.provider }}
+  <div class="innovation singlePage" role="innovation">
+    {{ page.innovation }}
   </div>
 
   {% include '@CIAndT/custom-footer.html.twig' %}
