--- a/templates/page--work.html.twig
+++ b/templates/page--work.html.twig
@@ -47,7 +47,7 @@
     {{ page.header }}
   </header>
 
-   <div class="custom customPage" role="custom">
+   <div class="custom singlePage" role="custom">
     {{ page.custom }}
   </div>
 
